# ixbrl-parse

./: .gitignore  .isort.cfg  .readthedocs.yaml  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.py  zensical.toml
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: docs.yml  linting.yml  publish.yml  run-tests.yml
docs/: README.md  _config.yml  changelog.md  command-line.md  development.md  index.md  plugins.md  python-module.md  reference.md
docs/ixbrlparse/: core.md  index.md  module.md  version.md
docs/ixbrlparse/components/: context.md  index.md  nonnumeric.md  numeric.md  transform.md
docs_theme/partials/: copyright.html
ixbrlparse/: __init__.py  __main__.py  core.py  version.py
ixbrlparse/components/: __init__.py  context.py  functionixt.py  nonnumeric.py  numeric.py  transform.py
src/ixbrlparse/: __init__.py  __main__.py  core.py  hookspecs.py  plugins.py
src/ixbrlparse/cli/: __init__.py
src/ixbrlparse/components/: __init__.py  _base.py  constants.py  context.py  formats.py  nonnumeric.py  numeric.py  transform.py
stubs/word2number/: w2n.pyi
tests/: test_classes.py  test_cli.py  test_formats.py  test_parse.py  test_plugins.py
tests/test_accounts/: account_1.html  account_1.xml  account_2.html  account_3.html  account_4.html  account_5.html  account_6.xhtml  account_errors.html  account_errors.xml  account_errors_date.html  account_errors_nonnumeric.html
xbrlparse/: core.py
