[build-system]
requires = [
    "beautifulsoup4",
    "lxml",
    "word2number",
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "ixbrlparse"
dynamic = [
    'version'
]
authors = [
    { name = "David Kane", email = "david@dkane.net" },
]
description = "A python module for getting useful data out of ixbrl files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/drkane/ixbrl-parse"
"Bug Tracker" = "https://github.com/drkane/ixbrl-parse/issues"

[tool.setuptools.packages.find]
where = ["ixbrlparse"]
namespaces = false